<resources>
    <string name="app_name">SQLite</string>
    <string name="btnLoginlabel">Login</string>
    <string name="edtUserNameHint">Username</string>
    <string name="edtPaswordHint">Password</string>
    <string name="btnRegisterLabel">Create account</string>
    <string name="tvUsernameLabel">Enter your login</string>
    <string name="tvUsernameMainActivityLabel">Your login</string>
    <string name="tvLocationMainActivityLabel">Your location</string>
    <string name="tvPasswordLabel">Enter your password</string>
    <string name="tvLocationLabel">Select your location</string>


    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="msg_authenticating">Authenticating</string>
    <string name="msg_name_empty">User name is empty</string>
    <string name="msg_passw_empty">Password is empty</string>
    <string name="msg_name_not_found">User name not found</string>
    <string name="msg_wrong_pass">Wrong password</string>
    <string name="msg_login_cnt_empty">Login can not be empty</string>
    <string name="msg_psw_cnt_empty">Password can not be empty</string>
    <string name="msg_login_cnt_spaces">Login can not contain spaces</string>
    <string name="msg_psw_cnt_spaces">Password can not contain spaces</string>
    <string name="msg_user_exists">User with such username already registered</string>
    <string name="msg_reg_success">Registration successful</string>
    <string name="msg_logout_request">Do you want to logout?</string>




</resources>
