<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shpp.sv.sqlite.RegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvUsernameLabel"
        android:id="@+id/tvUserName"
        android:textColor="@color/colorBackgroundUI" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtUserName"
        android:singleLine="true"
        android:hint="@string/edtUserNameHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvPasswordLabel"
        android:id="@+id/tvPassword"
        android:textColor="@color/colorBackgroundUI"
        android:paddingTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtPassword"
        android:hint="@string/edtPaswordHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvLocationLabel"
        android:id="@+id/tvLocation"
        android:textColor="@color/colorBackgroundUI"
        android:paddingTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnLocation"
        android:dropDownWidth="match_parent"
        android:paddingBottom="20dp"
        android:fadeScrollbars="false"
        android:spinnerMode="dropdown"
        android:paddingTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegisterLabel"
        android:id="@+id/btnRegister"
        android:background="@color/colorBackgroundUI"
        android:onClick="onBtnRegisterClick"
        android:textColor="@android:color/white" />

</LinearLayout>
