<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="290dp"
        android:layout_height="147dp"
        android:id="@+id/imageView"
        android:src="@drawable/sqlite1"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtUserName"
        android:hint="@string/edtUserNameHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtPassword"
        android:hint="@string/edtPaswordHint" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLoginlabel"
        android:id="@+id/btnLogin"
        android:background="@color/colorBackgroundUI"
        android:onClick="onBtnLoginClick"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegisterLabel"
        android:id="@+id/btnRegister"
        android:background="@color/colorBackgroundUI"
        android:onClick="onBtnRegisterClick"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp" />

</LinearLayout>
